--- a/src/blocks/card/__like-button/_is-active/card__like-button_is-active.css
+++ b/src/blocks/card/__like-button/_is-active/card__like-button_is-active.css
@@ -1,3 +1,13 @@
 .card__like-button_is-active {
   background: transparent url('../../../../images/like-active.svg') no-repeat;
 }
+
+.card__like {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card__like_count {
+  color: black;
+}
