--- a/src/blocks/popup/__form/popup__form.css
+++ b/src/blocks/popup/__form/popup__form.css
@@ -1,3 +1,19 @@
 .popup__form {
   margin-top: 27px;
 }
+
+.form__input-error {
+  display: block;
+height: 1em;
+  color: #F00;
+  font-family: Inter;
+  font-weight: 400;
+  font-size: 12px;
+  font-style: normal;
+  line-height: normal;
+}
+
+.add_card_input_name-error {
+  display: block;
+  height: 3em;
+}
