--- a/src/blocks/popup/__form/popup__form.css
+++ b/src/blocks/popup/__form/popup__form.css
@@ -4,7 +4,7 @@
 
 .form__input-error {
   display: block;
-height: 1em;
+  height: 1em;
   color: #F00;
   font-family: Inter;
   font-weight: 400;
@@ -13,7 +13,7 @@ height: 1em;
   line-height: normal;
 }
 
-.add_card_input_name-error {
+.add_card_input_name-error, .edit_input_name-error {
   display: block;
   height: 3em;
 }
